# cargo-docket

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  justfile  prelude.md  proto_docket.md  template.md
src/: cute_error.rs  main.rs  parse.rs
